[package]
name = "seldom_singleton"
version = "0.1.0"
edition = "2021"
categories = ["game-development"]
description = "Helper `SystemParam` for when you have a resource containing a handle"
keywords = ["gamedev", "bevy", "assets"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Seldom-SE/seldom_singleton"

[dependencies.bevy]
version = "0.14.0"
default-features = false
features = ["bevy_asset"]
